# skyscraper

./: .gitignore  .macos_app.sh  .project  API.bas  CMakeLists.txt  Compiling.md  CoreRoutines.bas  CoreRoutines2.bas  Debug.frm  Doxyfile  ElevatorCode.bas  Form1.frm  Form2.frm  Form3.frm  Form4.frm  Init.bas  Jamfile.in  Module1.bas  Object.frm  README  README.md  SConstruct  Sim.frm  SimCore.bas  Skyscraper.vbp  Skyscraper.vbw  Triton_Center.bas  bullet-changes.diff  bullet-changes.patch  bullet-fallfix.patch  bullet-reset.patch  changelog.txt  compiling.txt  config-msvc.h  config.h  configure  configure.ac  cs12-poly3d.patch  cs12-sparcfix.patch  cs12-wxsound.patch  (+23 more)
buildings/: Chicago Spire.bld  City Demo.bld  City Simulation.bld  City.bld  Colorful Objects Capital.bld  Comcast Center.bld  Convention Center.bld  Dellerton Plaza.bak  Dellerton Plaza.bld  EM113 Office Building A.bld  Earth Test.bld  Earth.bld  Empty.bld  Eternity Plaza.bld  Glass Tower Test.bld  Glass Tower.bld  Ground.bld  Medical Office Building.bld  Meradian Building.bld  Mushinegi Observation Tower.bld  Observation Tower.bld  One Mantis Center.bld  Palace Hotel.bld  Sears Tower.bld  Simple - 500 Floors.bld  Simple - AddText.bld  Simple - All Glass Doors - No Shaft.bld  Simple - Animated.bld  Simple - Basements.bld  Simple - Callstation.bld  Simple - CameraTexture.bld  Simple - Concurrent.bld  Simple - Custom Models.bld  Simple - Custom Objects.bld  Simple - Destination Dispatch Keypad.bld  Simple - Destination Dispatch.bld  Simple - Destination.bld  Simple - Double Decker DD.bld  Simple - Double Decker.bld  Simple - Escalator.bld  (+41 more)
client/: Compiling.md  bullet-changes.old.patch  changelog.txt  skyscraper.ini
codeblocks/: skyscraper-linux.cbp  skyscraper.cbp  skyscraper.layout
data/: Cube.material  brushed metal door.tga  couch.material  couch.mesh  dark muntz door.tga  key.mesh  license-info.txt  light muntz door.tga
demo/: icon.svg.import  main.tscn  project.godot  start_vr.gd
dependencies/angelscript/: CMakeLists.txt
dependencies/angelscript/include/: angelscript.h
dependencies/angelscript/source/: as_array.h  as_builder.cpp  as_builder.h  as_bytecode.cpp  as_bytecode.h  as_callfunc.cpp  as_callfunc_arm.cpp  as_callfunc_arm64_msvc.asm  as_callfunc_riscv64.cpp  as_callfunc_riscv64_gcc.S  as_callfunc_x64_gcc.cpp  as_compiler.cpp  as_compiler.h  as_config.h  as_configgroup.cpp  as_context.cpp  as_context.h  as_datatype.cpp  as_datatype.h  as_generic.cpp  as_generic.h  as_map.h  as_module.cpp  as_objecttype.cpp  as_objecttype.h  as_outputbuffer.h  as_parser.cpp  as_parser.h  as_property.h  as_restore.cpp  as_restore.h  as_scriptengine.cpp  as_scriptengine.h  as_scriptfunction.cpp  as_scriptfunction.h  as_scriptnode.h  as_scriptobject.cpp  as_scriptobject.h  as_texts.h  as_tokendef.h  (+4 more)
dependencies/ogre-procedural/: CMakeLists.txt
dependencies/ogre-procedural/include/OgreProcedural/: ProceduralPlatform.h
dependencies/ogre-procedural/src/: ProceduralMultiShapeGenerators.cpp  ProceduralTextureGenerator.cpp
guide/: action_viewer.html  buildings.html  callstations.html  camera_control.html  camtex.html  commands.html  console.html  controllers.html  controlpanel.html  designguide.html  destination_dispatch.html  development.html  elevator_cars.html  elevator_editor.html  elevators.html  escalator_control.html  extended.html  floors.html  general.html  globals.html  history.html  intro.html  move.html  mwalkway.html  object.html  objectcontrol.html  people.html  predefined.html  profiler.html  sbs.html  skycontrol.html  soundman.html  start.html  starting.html  stats.html  texman.html  textures.html  vehicles.html  virtual_manager.html  vr.html
modelviewer/: ModelAbout.frm  ModelAbout.frx  ModelSettings.frm  (+4 more)
server/: CMakeLists.txt  resources.cfg  skyscraper.ini
server/buildings/: Empty.bld  One Mantis Center.bld  Simple - All Glass Doors - No Shaft.bld  Simple - Animated.bld  Simple - Basements.bld  Simple - Concurrent.bld  Simple - Double Decker DD.bld  Simple - Double Decker.bld  Simple - Escalator.bld  Simple - Glass Elevator.bld  Simple - Hoistway Access.bld  Simple - Manual Switch.bld  Simple - Moving Walkway.bld  Simple - Multiple Buildings.bld  Simple - Old Elevator.bld  Simple - Tall.bld  Simple - Teleporter.bld  Simple - Top Box.bld  Skylab_impl.bld  Skyscrapersim Housing Estate.bld  Triton Center - Destination Dispatch.bld  Triton Center III.bld  Underground.bld
server/data/: couch.material  key.material  license-info.txt
server/data/New_Otis_Elevator/: Information.txt
server/data/New_Otis_Elevator/Concave_buttons/: otiscentraldclose.pdn
server/data/Otis_ZEN/: Information.txt
server/data/ogrebullet/materials/: WT.material  target.material
server/data/ogrebullet/materials/programs/: Grass.cg
server/data/ogrebullet/materials/scripts/: DepthShadowmap.material  Dither.material  Examples.compositor  GLSLSwizzle.material
server/data/ogrebullet/models/: Ball.mesh  Barrel.mesh  Cone.mesh  Cone2.mesh  Crate.mesh  Crate1.mesh  Mesh.mesh  RoomComplex.mesh  chassis.mesh  ellipsoid.mesh  geosphere8000.mesh  ogrehead.mesh  wheel.material  wheel.mesh
server/data/ogrebullet/textures/: MaPZone[Metal_Grate_normal].dds
server/data/pool/: swimmingpool.collider.mesh  swimmingpool.material
server/src/main/: server.cpp  server.h
server/src/sbs/: action.cpp  action.h  buttonpanel.cpp  buttonpanel.h  callstation.cpp  callstation.h  cameratexture.cpp  cameratexture.h  control.cpp  control.h  controller.h  directional.cpp  directional.h  door.cpp  door.h  doorsystem.cpp  doorsystem.h  elevator.cpp  elevator.h  elevatorcar.cpp  elevatorcar.h  elevatordoor.cpp  escalator.cpp  escalator.h  floor.cpp  floor.h  floorindicator.cpp  floorindicator.h  globals.h  indicator.cpp  indicator.h  light.cpp  light.h  lock.cpp  lock.h  manager.cpp  manager.h  mesh.cpp  mesh.h  model.cpp  (+36 more)
server/src/script/: buildings.cpp  callstations.cpp  commands.cpp  controllers.cpp  elevatorcars.cpp  elevators.cpp  floors.cpp  globals.cpp  processor.cpp  processor.h  section.cpp  section.h  textures.cpp  vehicles.cpp
(+960 files in other folders)
